# Flashcards

./: .gitignore
backend/: .env.example  .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2aca3c945df1_create_decks_cards_languages_and_states_.py
backend/app/: database.py  main.py
backend/app/api/: __init__.py  decks.py
backend/app/models/: card.py  deck.py
backend/scripts/: init_data.py
frontend/src/: App.css  App.tsx  AppRouter.tsx
frontend/src/assets/Models/: BDDFake.ts
frontend/src/components/Loader/: loader.tsx
frontend/src/components/card/: card.css  card.tsx
frontend/src/components/deck/: deck.css  deck.tsx
frontend/src/components/desk/: desk.css  desk.tsx
frontend/src/components/navigator/: navigator.css  navigator.tsx
frontend/src/hooks/: useFetch.ts
frontend/src/public/: Home.tsx  Practice.tsx
frontend/src/services/: decksAdapters.ts
