[project]
name = "flashcards-backend"
version = "0.1.0"
description = "Backend for flashcards app with spaced repetition"
authors = [
    {name = "Andres",email = "andres.claussen.eng@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
